extra spacing issue solved

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body{
 
 /* Navbar Styling */
 .nav-div{
-    position: fixed;
+    position: absolute;
     padding: 1.1rem 2.5rem;
     z-index: 1;
     filter: brightness(100%);
